fix: image jump

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -251,6 +251,10 @@ a {
   padding: 8px;
 }
 
+.photo-inner img {
+  object-fit: cover;
+}
+
 .photo-cap {
   position: absolute;
   bottom: 8px;
